# InterpolationProject

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
datapoints/: chebyshev_sampling.txt  lagrange_vs_barycentric.txt  natural_vs_clamped.txt  uniform_sampling.txt
include/: DataReader.hpp  barycentric_interpolator.hpp  chebychev_interpolator.hpp  cubic_spline_interpolator.hpp  data_reader.hpp  datagen.hpp  fourier_approximator.hpp  interpolator.hpp  interpolators.hpp  lagrange_interpolator.hpp  plotter.hpp  polynomial_interpolator.hpp  project_exceptions.hpp
src/: DataReader.cpp  app.cpp  barycentric_interpolator.cpp  chebychev_interpolator.cpp  cubic_spline_interpolator.cpp  data_reader.cpp  datagen.cpp  fourier_approximator.cpp  generate_plots.cpp  lagrange_interpolator.cpp  main.cc  main.cpp  plotter.cpp  polynomial_interpolator.cpp
test/: test_barycentric_interpolator.cpp  test_cubic_spline_interpolator.cpp  test_data_reader.cpp  test_lagrange_interpolator.cpp  test_polynomial_interpolator.cpp
test/data/: invalid_number_datapoints.txt  missing_hashtag.txt  non_numeric_M.txt  non_numeric_N.txt  non_numeric_datapoint.txt  valid_datafile.txt
